# bandcamp-dl

./: README.md  bandcamp.py  pyproject.toml  requirements.txt
src/: bandcamp_dl.py
